...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YVV-Cb-boN">
                                        <rect key="frame" x="0.0" y="-10" width="50" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="50" id="YKZ-Ke-wwb"/>
                                            <constraint firstAttribute="height" constant="50" id="hZ0-4d-Chl"/>
                                        </constraints>
                                        <state key="normal" title="Menu" image="hamburger">
                                            <color key="titleColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <segue destination="gtl-oZ-g8z" kind="modal" id="Zfr-Ku-kG2"/>
                                        </connections>
                                    </button>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y6x-wg-Ns7">
                                <rect key="frame" x="0.0" y="728" width="375" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="GGe-1b-5Oc"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="17"/>
                                <state key="normal" title="Log Out">
                                    <color key="titleColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="logOutPressed:" destination="Dqz-fM-tBx" eventType="touchUpInside" id="ccl-IU-60F"/>
                                </connections>
                            </button>
...
